--- a/HSPA/Frontend/tsconfig.json
+++ b/HSPA/Frontend/tsconfig.json
@@ -24,6 +24,7 @@
     ]
   },
   "angularCompilerOptions": {
+    "no-string-literal":false,
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
