--- a/HSPA/Frontend/package.json
+++ b/HSPA/Frontend/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@ngrx/effects": "^14.3.2",
+    "@ngrx/entity": "^14.3.2",
+    "@ngrx/store": "^14.3.2",
+    "@ngrx/store-devtools": "^14.3.2",
     "@popperjs/core": "^2.11.6",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.2.0",
@@ -31,6 +35,7 @@
     "@angular-devkit/build-angular": "^14.1.0",
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "^14.1.0",
+    "@ngrx/schematics": "^14.3.2",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
